appendix/kubernetes/templates/code-server.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: code-server
  namespace: geek-apps
subsets:
  - addresses:
      - ip: 192.168.1.80
    ports:
      - port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: geek-apps
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: geek-apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - code.zizhizhan.com
    secretName: star.zizhizhan.com-tls
  rules:
  - host: code.zizhizhan.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: code-server
            port:
              number: 8080
